remove auronix chat

--- a/src/app/components/public-document-mobile-solution-view/public-document-mobile-solution-view.component.html
+++ b/src/app/components/public-document-mobile-solution-view/public-document-mobile-solution-view.component.html
@@ -40,7 +40,7 @@
       <small>Autor: <strong>{{solution?.createdBy?.firstname}} {{solution?.createdBy?.lastname}}</strong></small>
     </div>
 
-    <div class="set-12 row" [innerHTML]="solution?.description"></div>
+    <div class="set-12 row desc" [innerHTML]="solution?.description"></div>
 
     <div class="set-12 txt-center row vote-tools">
       <p>Relevancia ciudadana</p>
