--- a/src/app/components/public-document-mobile-topic-list/public-document-mobile-topic-list.component.scss
+++ b/src/app/components/public-document-mobile-topic-list/public-document-mobile-topic-list.component.scss
@@ -11,6 +11,7 @@
     margin-bottom: 10px;
     display: flex;
     align-items: center;
+    justify-content: flex-start;
 
     .set-2 {
       display: flex;
