--- a/src/app/hub/app-configuration/app-configuration.component.html
+++ b/src/app/hub/app-configuration/app-configuration.component.html
@@ -2,6 +2,12 @@
   <mat-spinner></mat-spinner>
 </div>
 
+<!-- desktop -->
+<div class="set-12" *ngIf="isDataAvailable && !isMobile">
+  hello
+</div>
+
+<!-- mobile -->
 <div class="set-12 form-profile" *ngIf="isDataAvailable && isMobile">
   <h3>Mi perfil</h3>
 
