--- a/src/app/public-documents/components/top10-list/top10-list.component.html
+++ b/src/app/public-documents/components/top10-list/top10-list.component.html
@@ -8,7 +8,7 @@
     <span mat-line>
       <div mat-line>
         <button type="button" class="linker" (click)="linkMe(item.url)">
-          {{ item.title }}
+          {{(item.title.length > 50) ? (item.title | slice: 0 : 50) + '...' : (item.title)}}
         </button>
       </div>
     </span>
